fix: flicker

--- a/app/styles/btn.styl
+++ b/app/styles/btn.styl
@@ -20,6 +20,8 @@
   // transition focus
   transition: all quick
 
+  transform: translate3d(0, 0, 0)
+
   &.alt
     background: transparent
     color: c-dark
